style: revise README.md and add geosolver